# TiffReader

./: CMakeLists.txt  CustomTiffTags.cpp  CustomTiffTags.h  MyTagReader.h  MyTagWriter.cpp  MyTagWriter.h  README.md  TagStruct.cpp  TagStruct.h  TagViewData.cpp  TagViewData.h  main.cpp
